Fix tests for 'fudge'

--- a/t/02-version.out_v6.0.3
+++ b/t/02-version.out_v6.0.3
@@ -2,8 +2,9 @@ plan 8;
 
 is 2**2, 4;
 #?v6.0.0
-is 2+2, 4;
-#?v6.0.5 'GH issue #xyz'
+skip('Version v6.0.0 required', 1); # { is 2+2, 4;
+#  }
+#?v6.0.5+ 'GH issue #xyz'
 skip('GH issue #xyz', 2);# {
 #     is "Life, the Universe, and Everything".WHY, 42;
 #     is 42.WHAT, Int, 'some reason';
