--- a/README
+++ b/README
@@ -1,12 +1,9 @@
 	The Official Perl 6 Test Suite
 
-Its purpose is to validate implementations that wish to be known
-as a conforming Perl 6 implementation. 
+Version: 6.c (Christmas)
 
-Please consider this test suite to be the bleeding edge of Perl 6
-development. New tests, tests for experimental new features, etc.
-will live on this branch. Once a specification is cut, a branch
-will be created for that version of the spec, e.g. 6.c for Christmas.
+Its purpose is to validate implementations that wish to be known
+as a conforming Perl 6 implementation.
 
 As they develop, different implementations will certainly be in
 different states of readiness with respect to the test suite, so
