Do not rely on Perl 6 Implementation's auxiliary files

--- a/packages/README
+++ b/packages/README
@@ -5,3 +5,9 @@ a hyphen in the filename of the .pm file. This way, we can just
     use t::spec::packages::Whatever;
 instead of needing to quote the package name all the time, or add the proper
 directory to the Perl 6 equivalent of @INC.
+
+*****************************************************************************
+** WARNING: This file can be used by some tests as an arbitrary file to read
+** arbitrary data from and rely on it being located here, under this name.
+** If changing the name or location, ensure all tests still pass.
+*****************************************************************************
