--- a/t/04-combinations.out_impl.2
+++ b/t/04-combinations.out_impl.2
@@ -1,4 +1,6 @@
+use v6;
 use Test;
+
 plan 10;
 
 #?DOES 2
@@ -9,7 +11,7 @@ sub same-type ($x, $y) {
 
 #?v6.0.5+ 4
 #?impl 2 skip 'NYI'
-skip('NYI', 1); # { is "Life, the Universe, and Everything".WHY, 42;
+skip('NYI', 1); # { is "Life, the Universe and Everything".WHY, 42;
 #  }
 skip('NYI', 1); # { is 42.WHAT, Int, 'some reason';
 #  }
